looking for other change

--- a/dj_pro/local_uwsgi.ini
+++ b/dj_pro/local_uwsgi.ini
@@ -1,15 +1,16 @@
 [uwsgi]
 socket = :8000
 master = true
-#chdir = /home/charles/mysite/mysite
+chdir = /dj_pro/dj_pro
 #module = mysite.wsgi
-module = django_wsgi 
-processes = 8
+wsgi-file = dj_pro/wsgi.py 
 listen = 120 
+master = True
 enable-threads = true
 daemonize = /tmp/uwsgi.log 
 pidfile = /tmp/uwsgi.pid
-pythonpath = /dj_pro/dj_pro
 buffer-size =  32768
 reload-mercy = 8
 vacuum = true
+processes = 2 
+threads = 2 
