--- a/dj_pro/local_nginx.conf
+++ b/dj_pro/local_nginx.conf
@@ -18,6 +18,10 @@ server {
         alias /dj_pro/dj_pro/dj_pro/static/; # your Django project's static files - amend as required
     }
 
+    location /static/rest_framework/ {
+        alias /dj_pro/lib/python2.7/site-packages/rest_framework/static/rest_framework/; # your Django project's static files - amend as required
+    }
+
     # Finally, send all non-media requests to the Django server.
     location / {
         root /dj_pro/dj_pro/dj_pro;
