--- a/dj_pro/local_nginx.conf
+++ b/dj_pro/local_nginx.conf
@@ -10,6 +10,13 @@ server {
     client_max_body_size 75M; # adjust to taste
 
     # Django media
+    location ~* \.(jpg|jpeg|gif|png|css|js|ico|xml|mp3|mp4)$ {
+         access_log        off;
+         log_not_found     off;
+         expires           30d;
+     }
+
+
     location /media/ {
         alias /dj_pro/dj_pro/dj_pro/media/; # your Django project's media files - amend as required
     }
