--- a/dj_pro/local_nginx.conf
+++ b/dj_pro/local_nginx.conf
@@ -10,12 +10,6 @@ server {
     client_max_body_size 75M; # adjust to taste
 
     # Django media
-    location ~* \.(jpg|jpeg|gif|png|css|js|ico|xml|mp3|mp4)$ {
-         access_log        off;
-         log_not_found     off;
-         expires           30d;
-     }
-
 
     location /media/ {
         alias /dj_pro/dj_pro/dj_pro/media/; # your Django project's media files - amend as required
@@ -29,6 +23,17 @@ server {
         alias /dj_pro/lib/python2.7/site-packages/rest_framework/static/rest_framework/; # your Django project's static files - amend as required
     }
 
+    location  /media/music/\.(mp3|mp4)$ {
+         access_log        off;
+         log_not_found     off;
+         expires           30d;
+     }
+    
+    location  /media/img/\.(gif|jpg|png)$ {
+         access_log        off;
+         log_not_found     off;
+         expires           30d;
+     }
     # Finally, send all non-media requests to the Django server.
     location / {
         root /dj_pro/dj_pro/dj_pro;
