--- a/dj_pro/local_nginx.conf
+++ b/dj_pro/local_nginx.conf
@@ -23,16 +23,18 @@ server {
         alias /dj_pro/lib/python2.7/site-packages/rest_framework/static/rest_framework/; # your Django project's static files - amend as required
     }
 
-    location  /media/music/\.(mp3|mp4)$ {
-         access_log        off;
-         log_not_found     off;
-         expires           30d;
+    location = /media/music/\.(mp3|mp4)$ {
+        if (-f $request_filename) {
+            expires 1h;
+            break;
+        }
      }
     
-    location  /media/img/\.(gif|jpg|png)$ {
-         access_log        off;
-         log_not_found     off;
-         expires           30d;
+    location = /media/img/\.(gif|jpg|png)$ {
+        if (-f $request_filename) {
+            expires 1h;
+            break;
+        }
      }
     # Finally, send all non-media requests to the Django server.
     location / {
