next_fix_repeat

--- a/dj_pro/nginx.conf
+++ b/dj_pro/nginx.conf
@@ -15,22 +15,8 @@ http {
 	# Basic Settings
 	##
 
-	sendfile on;
-	tcp_nopush on;
-	tcp_nodelay on;
-	keepalive_timeout 65;
-    keepalive_requests 100000;
-    reset_timedout_connection on;
-
-	types_hash_max_size 2048;
-    client_body_buffer_size 10K;
-    client_header_buffer_size 1k;
-    client_max_body_size 8m;
-    large_client_header_buffers 2 1k;
-    client_body_timeout 12;
-    client_header_timeout 12;
-    send_timeout 10;
-
+    client_header_buffer_size    10k;
+    large_client_header_buffers  4 4k;
 	# server_tokens off;
 
 	# server_names_hash_bucket_size 64;
@@ -50,23 +36,31 @@ http {
 	# Gzip Settings
 	##
 
-	gzip on;
-	gzip_disable "msie6";
-    gzip_comp_level  2;
-    gzip_min_length  1000;
-    gzip_proxied     expired no-cache no-store private auth;
-    gzip_types       text/plain application/x-javascript text/xml text/css application/xml;
+    gzip on;
 
+    gzip_min_length  1100;
 
-    # Caches information about open FDs, freqently accessed files.
-    # Changing this setting, in my environment, brought performance up from 560k req/sec, to 904k req/sec.
-    # I recommend using some varient of these options, though not the specific values listed below.
-    open_file_cache max=200000 inactive=20s; 
-    open_file_cache_valid 30s; 
-    open_file_cache_min_uses 2;
-    open_file_cache_errors on;
+    gzip_buffers    4 8k;
 
+    gzip_types      text/plain;
 
+    output_buffers  1 32k;
+
+    postpone_output  1460;
+
+    client_header_timeout  3m;
+
+    client_body_timeout    3m;
+
+    send_timeout          3m;
+
+    sendfile                on;
+
+    tcp_nopush              on;
+
+    tcp_nodelay            on;
+
+    keepalive_timeout  65;
 
 	# gzip_vary on;
 	# gzip_proxied any;
